--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-  "name": "learning-git-3",
+  "name": "Solo_project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "npm-run-all test:*",
-    "test:html": "globstar nu-html-checker *.html",
+    "test:html": "nu-html-checker index.html",
     "init-project": "npm install && npm-run-all init:*",
-    "init:dirs": "mkdirp sass css vendor images js",
-    "init:files": "touch README.md index.html sass/style.scss js/script.js",
+    "init:dirs": "mkdir -p sass/components sass/pages sass/sections css vendor images js fonts docs",
+    "init:files": "touch index.html styleguide.html sass/style.scss sass/_layout.scss sass/_mixins.scss sass/_normalize.scss sass/_variables.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "build": "npm-run-all build:* test",
-    "build:clean": "rimraf css/*",
+    "build:clean": "rimraf css/*.css",
     "build:sass": "node-sass --output-style compact -o css sass",
-    "build:autoprefixer": "autoprefixer-cli css/style.css",
+    "build:autoprefixer": "autoprefixer-cli  css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
-    "watch": "npm-run-all build watch:*",
-    "watch:browsersync": "browser-sync start --server --files \"css/*.css\" \"*.html\"",
-    "watch:sassprefixer": "onchange -d 100 node-sass --output-style expanded --source-map true -o css sass css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css"
+    "build-prod": "npm-run-all build-prod:*",
+    "build-prod:erase-old-docs": "rm -r docs",
+    "build-prod:create-new-docs": "mkdir docs",
+    "build-prod:sass": "node-sass --output-style compact -o docs/css sass/style.scss",
+    "build-prod:autoprefixer": "autoprefixer-cli docs/css/style.css",
+    "build-prod:copy-files": "cp *.html docs && rm docs/styleguide.html",
+    "build-prod:copy-dirs": "cp -r images docs && cp -r js docs && cp -r fonts docs",
+    "build-prod:test-html": "nu-html-checker docs/*.html",
+    "watch": "npm-run-all build -p watch:*",
+    "watch:sassprefixer": "npm-run-all -p watch-sass watch-autoprefixer",
+    "watch-sass": "onchange sass/**/*.scss -- node-sass --output-style expanded --source-map true -o css sass",
+    "watch-autoprefixer": "onchange css/style.css -- autoprefixer-cli -o css/style.css css/style.css",
+    "watch:browsersync": "browser-sync start --server --files sass/**/*.scss *.html"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agata-m/learning-git-3.git"
+    "url": "git+https://github.com/agata-m/Solo_project.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/agata-m/learning-git-3/issues"
+    "url": "https://github.com/agata-m/Solo-project/issues"
   },
-  "homepage": "https://github.com/agata-m/learning-git-3#readme",
+  "homepage": "https://github.com/agata-m/Solo_project#readme",
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.26.5",
